fixed licensing spacing

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -157,7 +157,7 @@ body {
 		li {
 			// float: left;
 			display: inline-block;
-			padding: 5px;
+			padding: 0px 5px;
 		}
 	}
 	.address,
